@@ -1,3 +1,12 @@
+2007-02-21  Vladimir Olexa  <vladimir.olexa@gmail.com>
+
+        Reviewed by Tim H.
+
+        Bug 12834: Drosera should remember scroll position of open files like Xcode
+        http://bugs.webkit.org/show_bug.cgi?id=12834
+
+        * Drosera/debugger.js: Implemented scrolling memory 
+
 2007-02-20  Geoffrey Garen  <ggaren@apple.com>
 
         Tools tweak. No review necessary.
